app/assets/stylesheets/DocumentSet/index.less
@import "../variables.less";
@import "../mixins.less";
@import "../vendor/bootstrap/less/type.less";
@import "../vendor/bootstrap/less/wells.less";
@import "index/mixins.less";

body.document-set-index {
  .page-header {
    .overview-page-header();
  }

  .nav-buttons {
    margin: (@overviewPageHeaderMarginTop + (@overviewPageHeaderLineHeight - 2em) / 2) 0 1em;
    float: right;

    .dropdown {
      display: inline-block;
    }
  }

  #jobs-and-document-sets .nav-buttons {
    margin: 1.5em 0;
    display: block;
    text-align: right;

    a {
      text-align: left;
    }
  }

  .document-sets {
    clear: both;
  }

  p.preamble {
    margin: 2em 0;
  }

  // Navigation...
  &>.container {
    position: relative;

    .import-pane {
      background: @bodyBackground;
      position: absolute;
      .opacity(0);
      top: 0;
      left: 0;
      width: 100%;
      .transition(opacity .35s ease-in-out);
    }

    #jobs-and-document-sets {
      background: @bodyBackground;
      position: relative;
      z-index: 1;
      .transition(~"opacity .35s ease-in-out, left .35s ease-in-out");
    }

    &[data-import-pane]>#jobs-and-document-sets {
      left: -100%;
      .opacity(0);
    }

    &[data-import-pane="public"]>#import-public,
    &[data-import-pane="shared"]>#import-shared,
    &[data-import-pane="from-documentcloud-account"]>#import-from-documentcloud-account,
    &[data-import-pane="from-upload"]>#import-from-upload {
      left: 0;
      .opacity(100);
    }
  }

  .dropdown-menu {
    .border-radius(0);
    border: 1px solid @mutedShadeColor;
    padding: 0;
    overflow: hidden;

    li {
      padding: 0 1em;
      margin-top: -1px; // so top looks same as bottom on hover

      &:hover {
        background: @darkBodyBackground;
      }
    }

    a {
      padding: .75em 0;
      background: transparent;
      border-bottom: 1px solid @darkBodyBackground;
      line-height: 1;
      vertical-align: bottom;

      &:hover {
        background: transparent;
        color: inherit;
      }
    }
  }

  .document-set-creation-jobs {
    margin-top: 20px;
  }

  .document-set-creation-jobs>ul{
    .document-set-list-old();
  }

  .document-sets>ul {
    .document-set-list();
  }

  .document-set-creation-jobs {
    margin: 20px;
    padding: 19px;
    border: 1px solid darken(@wellBackground, 7%);
    .border-radius(@baseBorderRadius);
    .box-shadow(inset 0 1px 1px rgba(0, 0, 0, .05));

    &>h2 {
      margin-top: 0;
    }

    &>h2, &>p {
      margin-left: 20px; // margin of .well
    }
  }

  #error-list-modal {
    h2 {
      font-size: 20px;
    }
  }

  #sharing-options-modal {
    li {
      line-height: 30px;
      font-weight: bold;
    }
    
    li a {
      opacity: 0.1;
      .transition(opacity .35s ease);
      margin-left: 0.5em;
    }

    li:hover a {
      opacity: 1;
      text-decoration: none;
      margin-left: 0.5em;
    }
  }

  @import "./index/import-pane.less";
  @import "./index/import-csv.less";
}

